2011-01-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* network/porting/README, network/porting/if_xxx_rtems.c,
	startup/bspstart.c: Remove CVS artefacts.

2010-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove -Wno-unused-variable.

2010-08-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1682/bsps
	* startup/bspstart.c: Add BSP_poll_char.

2010-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Remove AC_CHECK_SIZEOF([void *]).

2010-06-29	Joel Sherrill <Joel.Sherrill@OARcorp.com>

	* configure.ac: Added AC_CHECK_SIZEOF macro.

2010-05-10	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* include/bsp.h: Do not include <bsp/bsp_bsdnet_attach.h> if networkign
	disabled.

2010-04-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* network/support/bsp_attach.c: Include <unistd.h>.

2010-03-27	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/if_gfe/if_gme.c, network/if_em/if_em.c: Removed warnings

2010-02-09  Till Straumann <strauman@slac.stanford.edu>

	* network/if_mve/mv643xx_eth.c: Fixed alignment attribute
	in descriptor declaration. Not the pointers to the descriptors
	have to be aligned but the descriptors themselves (didn't
	cause problems but caused unnecessary holes in 'private' struct).

	FIX: Added more robustness when number of available TX descriptors
	drops to zero. (This can e.g., happen if the link goes bad causing
	packets to stall in the FIFO.) At the following points the transmitter
	is explicitly (re-)started:
	  o when link comes up and number of available TXDs is zero the
	    TX is restarted.
	  o on a failed attempt to send data due to lack of TXDs the
	    TX is restarted if swiping the TX ring doesn't yield any
	    buffers (i.e., if the # of available buffers is still zero
	    after the swipe).

2009-12-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Removed ppc_exc_bspsupp.h include file.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>
