@@ -1,5 +1,10 @@
 2011-01-26	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	* Makefile.am: Remove build_date.c.
+	* startup/bspstart.c: Remove BSP_build_date.
+
+2011-01-26	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* network/porting/README, network/porting/if_xxx_rtems.c,
 	startup/bspstart.c: Remove CVS artefacts.
 
